Remove code for enabling supervised users from settings.

Bug: 804699
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I378d57f3a583b665654e586b720bf73f24dffb12