chrome/browser/resources/settings/people_page/profile_info_browser_proxy.js
@@ -33,12 +33,6 @@ cr.define('settings', function() {
      * 'profile-stats-count-ready' WebUI listener event.
      */
     getProfileStatsCount() {}
-
-    /**
-     * Returns a Promise that's true if the profile manages supervised users.
-     * @return {!Promise<boolean>}
-     */
-    getProfileManagesSupervisedUsers() {}
   }
 
   /**
@@ -53,11 +47,6 @@ cr.define('settings', function() {
     /** @override */
     getProfileStatsCount() {
       chrome.send('getProfileStatsCount');
-    }
-
-    /** @override */
-    getProfileManagesSupervisedUsers() {
-      return cr.sendWithPromise('getProfileManagesSupervisedUsers');
     }
   }
 
