chrome/browser/resources/settings/people_page/users_page.js
@@ -20,15 +20,6 @@ Polymer({
       notify: true,
     },
 
-    /**
-     * True if the current profile manages supervised users.
-     * Set in people-page.
-     */
-    profileManagesSupervisedUsers: {
-      type: Boolean,
-      value: false,
-    },
-
     /** @private */
     isOwner_: {
       type: Boolean,
