chrome/test/data/webui/settings/test_profile_info_browser_proxy.js
@@ -9,7 +9,6 @@ class TestProfileInfoBrowserProxy extends TestBrowserProxy {
     super([
       'getProfileInfo',
       'getProfileStatsCount',
-      'getProfileManagesSupervisedUsers',
     ]);
 
     this.fakeProfileInfo = {
@@ -28,11 +27,5 @@ class TestProfileInfoBrowserProxy extends TestBrowserProxy {
   /** @override */
   getProfileStatsCount() {
     this.methodCalled('getProfileStatsCount');
-  }
-
-  /** @override */
-  getProfileManagesSupervisedUsers() {
-    this.methodCalled('getProfileManagesSupervisedUsers');
-    return Promise.resolve(false);
   }
 }
